...
        },
        bottomBar = {
            ApplicationBottomBar {
                viewModel.processIntent(
                    AcademyApplicationIntent.SendApplication(
                        printedName,
                        age,
                        quirk,
                        educationDocumentNumber,
                        applicationMessage,
                        selectedAcademy1,
                        selectedAcademy2,
                        selectedAcademy3
                    )
...
    ) { paddingValues ->
        Column(
            modifier = Modifier
                .padding(paddingValues)
                .fillMaxSize()
                .verticalScroll(rememberScrollState())
                .semantics { contentDescription = "container" }
        ) {
            TitleText(
                text = "Информация о заявителе",
                modifier = Modifier.padding(dimensionResource(id = R.dimen.default_padding_twice))
            )
            ElevatedCard(
...
                    onValueChange = {
                        printedName = it
                    },
                    modifier = Modifier
                        .fillMaxWidth()
                        .padding(dimensionResource(id = R.dimen.default_padding))
                        .semantics { contentDescription = "full name" },
                    maxLines = 3,
                    label = {
                        Text("ФИО")
                    },
                    colors = OutlinedTextFieldDefaults.colors(
                        focusedBorderColor = PrimaryRed,
...
                    onValueChange = {
                        educationDocumentNumber = it
                    },
                    modifier = Modifier
                        .fillMaxWidth()
                        .padding(dimensionResource(id = R.dimen.default_padding))
                        .semantics { contentDescription = "document num" },
                    maxLines = 1,
                    label = {
                        Text("Документ об образовании")
                    },
                    colors = OutlinedTextFieldDefaults.colors(
                        focusedBorderColor = PrimaryRed,
...
                    onValueChange = {
                        selectedAcademy1Info = it
                    },
                    modifier = Modifier
                        .fillMaxWidth()
                        .menuAnchor()
                        .semantics { contentDescription = "priority1" },
                    label = {
                        Text("Приоритет 1")
                    },
                    maxLines = 1,
                    trailingIcon = {
                        ExposedDropdownMenuDefaults.TrailingIcon(
...
                    onValueChange = {
                        selectedAcademy2Info = it
                    },
                    modifier = Modifier
                        .fillMaxWidth()
                        .menuAnchor()
                        .semantics { contentDescription = "priority2" },
                    label = {
                        Text("Приоритет 2")
                    },
                    maxLines = 1,
                    trailingIcon = {
                        ExposedDropdownMenuDefaults.TrailingIcon(
...
                    onValueChange = {
                        selectedAcademy3Info = it
                    },
                    modifier = Modifier
                        .fillMaxWidth()
                        .menuAnchor()
                        .semantics { contentDescription = "priority3" },
                    label = {
                        Text("Приоритет 3")
                    },
                    maxLines = 1,
                    trailingIcon = {
                        ExposedDropdownMenuDefaults.TrailingIcon(
...

@OptIn(ExperimentalMaterial3Api::class)
@Composable
private fun ApplicationTopBar() {
    TopAppBar(
        title = {
            Text("Заявка на поступление в академию")
        },
        colors = TopAppBarDefaults.topAppBarColors(
            containerColor = PrimaryRed,
            titleContentColor = PrimaryWhite
        )
    )
...
        Box(
            modifier = Modifier.fillMaxWidth(),
            contentAlignment = Alignment.Center
        ) {
            PrimaryButton(
                onClick = sendApplicationClick,
                text = "Подать заявление"
            )
        }
    }
}

