...
            showError("Укажите причуду")
        } else if (applicationIntent.educationDocumentNumber.isBlank()) {
            showError("Укажите номер документа об образовании")
        } else if (applicationIntent.firstAcademy == null ||
            applicationIntent.secondAcademy == null ||
            applicationIntent.thirdAcademy == null) {
            showError("Выберите три учебных заведения в порядке приоритета")
        } else {
            viewModelScope.launch(Dispatchers.IO) {
                val application = AcademyApplication(
                    userId = systemRepository.getUserId(),
                    printedName = applicationIntent.printedName,
                    age = applicationIntent.age,
...
