...
                    ticketDescription = it
                },
                modifier = Modifier
                    .fillMaxWidth()
                    .padding(dimensionResource(id = R.dimen.default_padding))
                    .focusRequester(focusRequester)
                    .semantics { contentDescription = "new ticket description" },
                minLines = 1,
                label = {
                    Text(
                        text = NEW_TICKET_DESCRIPTION_FIELD_LABEL
                    )
                },
...
