...
                                onValueChange = {
                                    ticketComment = it
                                },
                                modifier = Modifier
                                    .fillMaxWidth()
                                    .padding(dimensionResource(id = R.dimen.default_padding))
                                    .semantics { contentDescription = "ticket rate comment" },
                                enabled = screenState.ticket.status == ActivityStatus.EVALUATION,
                                minLines = 1,
                                placeholder = {
                                    Text("Ввести...")
                                },
                                colors = OutlinedTextFieldDefaults.colors(
...
        Box(
            modifier = Modifier.fillMaxWidth(),
            contentAlignment = Alignment.Center
        ) {
            PrimaryButton(
                onClick = saveTicketCallback,
                text = "Сохранить"
            )
        }
    }
}

