...
        Scaffold(
            topBar = {
                PatrollingTopBar(screenState.patrol)
            },
            bottomBar = {
                val sendBtnText = when (screenState.patrol.status) {
                    Patrol.Status.PENDING -> "Начать"
                    Patrol.Status.STARTED -> "Завершить"
                    Patrol.Status.COMPLETED -> ":("
                }
                PatrollingBottomBar(
                    buttonClick = {
                        showSendDialog = true
                    },
...
